--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
     <li> <a href="tel:+380961111111">+38 096 111 11 11</a></li>
    </ul>
 </header>
-<div>
+
+<main>
     <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
-        <a href="">Замовити послугу</a>
+        <button type="button">Замовити послугу</button>
     </section>
-    <div>
+    <section>
+        <h1>Опис</h1>
         <ul>
             <li>
                 <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
@@ -44,10 +46,41 @@
                 <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
         </ul>
-    </div>
-</div>
-<body>
-    
-</body>
+    </section>
+    <section>
+        <h1>Чим ми займаємося</h1>
+        <ul>
+            <li><img src="/images/box-1.jpg" alt="Розробка" width="370" height="294"></li>
+            <li><img src="/images/box-2.jpg" alt="Пошук контактів" width="370" height="294"></li>
+            <li><img src="/images/box-3.jpg" alt="Дизайн" width="370" height="294"></li>
+        </ul>
+    </section>
+    <section>
+        <h2>Наша команда</h2>
+        <ul>
+            <li><img src="/images/img-3.jpg" alt="Ігор Дем'яненко" width="270">
+            <p>Ігор Дем'яненко</p>
+            <p>Product Designer</p></li>
+            <li><img src="/images/img-2.jpg" alt="Ольга Рєпіна" width="270">
+            <p>Ольга Рєпіна</p>
+            <p>Frontend Developer</p></li>
+            <li><img src="/images/img-1.jpg" alt="Микола Тарасов" width="270">
+            <p>Микола Тарасов</p>
+            <p>Marketing</p></li>
+            <li><img src="/images/img.jpg" alt="Михайло Єрмаков" width="270">
+            <p>Михайло Єрмаков</p>
+            <p>UI Designer</p></li>
+        </ul>
+    </section>
+</main>
+<footer>
+    <ul>
+        <li><a href="">WebStudio</a></li>
+        <li>м. Київ, пр-т Лесі Українки, 26</li>
+        <li>nfo@devstudio.com</li>
+        <li>+38 096 111 11 11</li>
+    </ul>
+</footer>
+ 
 </html>
 
