--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,9 +7,9 @@
     <title>Document</title>
   </head>
   <header>
+    <a href="">WebStudio</a>
     <nav>
       <ul>
-        <li><a href="">WebStudio</a></li>
         <li><a href="">Студія</a></li>
         <li><a href="">Портфоліо</a></li>
         <li><a href="">Контакти</a></li>
@@ -27,28 +27,28 @@
       <button type="button">Замовити послугу</button>
     </section>
     <section>
-      <h1>Опис</h1>
+      <h2>Опис</h2>
       <ul>
         <li>
-          <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+          <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
           <p>
             Ідейні міркування, і навіть початок повсякденної роботи з формування
             позиції.
           </p>
         </li>
         <li>
-          <h2>ПУНКТУАЛЬНІСТЬ</h2>
+          <h3>ПУНКТУАЛЬНІСТЬ</h3>
           <p>
             Завдання організації, особливо рамки і місце навчання кадрів тягне у
             себе.
           </p>
         </li>
         <li>
-          <h2>ПЛАНУВАННЯ</h2>
+          <h3>ПЛАНУВАННЯ</h3>
           <p>Так само консультація з широким активом значною мірою зумовлює</p>
         </li>
         <li>
-          <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+          <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
           <p>
             Значимість цих проблем настільки очевидна, що реалізація планових
             завдань.
@@ -57,11 +57,11 @@
       </ul>
     </section>
     <section>
-      <h1>Чим ми займаємося</h1>
+      <h2>Чим ми займаємося</h2>
       <ul>
         <li>
           <img
-            src="/images/box-1.jpg"
+            src="./images/box-1.jpg"
             alt="Розробка"
             width="370"
             height="294"
@@ -69,14 +69,14 @@
         </li>
         <li>
           <img
-            src="/images/box-2.jpg"
+            src="./images/box-2.jpg"
             alt="Пошук контактів"
             width="370"
             height="294"
           />
         </li>
         <li>
-          <img src="/images/box-3.jpg" alt="Дизайн" width="370" height="294" />
+          <img src="./images/box-3.jpg" alt="Дизайн" width="370" height="294" />
         </li>
       </ul>
     </section>
@@ -84,22 +84,22 @@
       <h2>Наша команда</h2>
       <ul>
         <li>
-          <img src="/images/img-3.jpg" alt="Ігор Дем'яненко" width="270" />
+          <img src="./images/img-3.jpg" alt="Ігор Дем'яненко" width="270" />
           <h3>Ігор Дем'яненко</h3>
           <p>Product Designer</p>
         </li>
         <li>
-          <img src="/images/img-2.jpg" alt="Ольга Рєпіна" width="270" />
+          <img src="./images/img-2.jpg" alt="Ольга Рєпіна" width="270" />
           <h3>Ольга Рєпіна</h3>
           <p>Frontend Developer</p>
         </li>
         <li>
-          <img src="/images/img-1.jpg" alt="Микола Тарасов" width="270" />
+          <img src="./images/img-1.jpg" alt="Микола Тарасов" width="270" />
           <h3>Микола Тарасов</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="/images/img.jpg" alt="Михайло Єрмаков" width="270" />
+          <img src="./images/img.jpg" alt="Михайло Єрмаков" width="270" />
           <h3>Михайло Єрмаков</h3>
           <p>UI Designer</p>
         </li>
@@ -110,9 +110,16 @@
     <a href="">WebStudio</a>
     <address>
       <ul>
-        <li>м. Київ, пр-т Лесі Українки, 26</li>
-        <li>nfo@devstudio.com</li>
-        <li>+38 096 111 11 11</li>
+        <li>
+          <a
+            href="https://goo.gl/maps/NkWGyPYZtcKStKFVA"
+            target="_blank"
+            rel="noreferrer noopener"
+          ></a
+          >м. Київ, пр-т Лесі Українки, 26
+        </li>
+        <li><a href="mailto:nfo@devstudio.com"></a>nfo@devstudio.com</li>
+        <li><a href="tel:+380961111111"></a> +38 096 111 11 11</li>
       </ul>
     </address>
   </footer>
